k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: fixup
  labels:
    app.kubernetes.io/part-of: fixup
    app.kubernetes.io/managed-by: kubectl
